# muxdev

./: .gitignore  README.md  pyproject.toml
docs/: advanced_parallel_learning.md  architecture.md  automation_design_memory.md  best_practices.md  configuration.md  ecosystem_automation.md  langgraph_loop_engineering.md  muxdev_dashboard_design.md  muxdev_deep_architecture_analysis.md  p0_acceptance_ready.md  p1_trusted_delivery_ready.md  p2_runtime_safety_provider_ready.md  p3_ecosystem_automation_ready.md  p4_advanced_parallel_learning_ready.md  p4_product_experience_ready.md  product_experience.md  product_guide.md  runtime_safety_provider.md  source_walkthrough.md  trusted_delivery.md  workflow_delivery_standards.md
examples/: README.md
plugins/: README.md
scripts/: verify_cross_platform.py
skills/: README.md
tests/: test_accounts.py  test_architecture_boundaries.py  test_cli.py  test_config_loader.py  test_daemon_client_server.py  test_delivery_gate.py  test_evidence_scorecard.py  test_evidence_v2.py  test_installers.py  test_langgraph_loop_rag.py  test_offline_render.py  test_p0_automation_memory.py  test_p1_trusted_delivery.py  test_p2_runtime_safety_provider.py  test_p3_ecosystem_automation.py  test_p3_memory_layers.py  test_p4_advanced_parallel_learning.py  test_p4_product_experience.py  test_platforms.py  test_prompt_templates.py  test_provider_adapters_m5.py  test_providers.py  test_repl_tui_m7.py  test_runtime_m1_m4.py  test_skill_governance_v2.py  test_strategy_main_path.py  test_stream_workflow_safety.py  test_structure.py  test_trace.py  (+3 more)
(+195 files in other folders)
