[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "muxdev"
version = "0.1.0"
description = "Local AI Coding CLI control plane"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "pyyaml>=6",
  "typer>=0.12",
  "rich>=13",
  "prompt_toolkit>=3",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[project.scripts]
muxdev = "muxdev.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"muxdev.config.defaults" = ["*.yaml"]
"muxdev.skills" = ["*/SKILL.md", "*/muxdev.skill.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
